MapFragment and surrounding structures refactored and cleaned, tests failing