@@ -1,6 +1,5 @@
 package pl.edu.agh.hiputs.model.map.example;
 
-import lombok.Getter;
 import pl.edu.agh.hiputs.model.actor.MapFragment;
 import pl.edu.agh.hiputs.model.car.Car;
 import pl.edu.agh.hiputs.model.car.Route;
@@ -8,47 +7,36 @@ import pl.edu.agh.hiputs.model.car.RouteElement;
 import pl.edu.agh.hiputs.model.car.RouteLocation;
 import pl.edu.agh.hiputs.model.id.JunctionId;
 import pl.edu.agh.hiputs.model.id.LaneId;
-import pl.edu.agh.hiputs.model.map.Junction;
-import pl.edu.agh.hiputs.model.map.LaneReadWrite;
 
 import java.util.ArrayList;
 import java.util.List;
-import java.util.Map;
 import java.util.concurrent.ThreadLocalRandom;
-import java.util.stream.Collectors;
+import java.util.function.Function;
 
-@Getter
 public class ExampleCarProvider {
 
     private static final Double DEFAULT_CAR_LENGTH = 4.5;
     private static final Double DEFAULT_MAX_SPEED = 20.0;
     private static final Integer DEFAULT_HOPS = 4;
-
-    private Map<JunctionId, List<LaneId>> junctionId2outgoingLaneId;
-    private Map<LaneId, JunctionId> laneId2outgoingJunctionId;
-    private Map<LaneId, LaneReadWrite> laneId2laneReadWrite;
-    private List<LaneId> laneIdList;
-
+    
+    private final MapFragment mapFragment;
+    private Function<JunctionId, List<LaneId>> junctionIdToOutgoingLaneIdList;
+    private Function<LaneId, JunctionId> laneIdToOutgoingJunctionId;
+    private List<LaneId> localLaneIdList;
+    
     public ExampleCarProvider(MapFragment mapFragment) {
+        this.mapFragment = mapFragment;
         readPatches(mapFragment);
     }
 
     void readPatches(MapFragment mapFragment) {
-        this.junctionId2outgoingLaneId = mapFragment.getLocalPatches().stream()
-                .flatMap(patch -> patch.getJunctions().values().stream())
-                .collect(Collectors.toMap(Junction::getId, junction -> new ArrayList<>(junction.getOutgoingLanesIds())));
-
-        this.laneId2outgoingJunctionId = mapFragment.getLocalPatches().stream()
-                .flatMap(patch -> patch.getLanes().values().stream())
-                .collect(Collectors.toMap(LaneReadWrite::getId, LaneReadWrite::getOutgoingJunction));
-
-        this.laneId2laneReadWrite = mapFragment.getLocalPatches().stream()
-                .flatMap(patch -> patch.getLanes().values().stream())
-                .collect(Collectors.toMap(LaneReadWrite::getId, laneReadWrite -> laneReadWrite));
-
-        this.laneIdList = mapFragment.getLocalPatches().stream()
-                .flatMap(patch -> patch.getLanes().keySet().stream())
-                .collect(Collectors.toList());
+        this.junctionIdToOutgoingLaneIdList = junctionId ->
+                mapFragment.getJunctionReadable(junctionId).getOutgoingLanesIds().stream().toList();
+    
+        this.laneIdToOutgoingJunctionId = laneId ->
+                mapFragment.getLaneReadable(laneId).getOutgoingJunction();
+    
+        this.localLaneIdList = mapFragment.getLocalLaneIds().stream().toList();
     }
 
     public Car generateCar() {
@@ -70,13 +58,14 @@ public class ExampleCarProvider {
 
     public Car generateCar(LaneId startLaneId, int hops, double length, double maxSpeed) {
         RouteLocation routeLocation = this.generateRoute(startLaneId, hops);
+        ThreadLocalRandom threadLocalRandom = ThreadLocalRandom.current();
         return Car.builder()
                 .length(length)
                 .maxSpeed(maxSpeed)
                 .routeLocation(routeLocation)
                 .laneId(startLaneId)
-                .positionOnLane(ThreadLocalRandom.current().nextDouble(laneId2laneReadWrite.get(startLaneId).getLength()))
-                .speed(ThreadLocalRandom.current().nextDouble(DEFAULT_MAX_SPEED))
+                .positionOnLane(threadLocalRandom.nextDouble(mapFragment.getLaneReadable(startLaneId).getLength()))
+                .speed(threadLocalRandom.nextDouble(DEFAULT_MAX_SPEED))
                 .build();
     }
 
@@ -85,10 +74,10 @@ public class ExampleCarProvider {
         LaneId nextLaneId, laneId = startLane;
         JunctionId junctionId;
         for (int i = 0; i < hops; i++) {
-            junctionId = this.laneId2outgoingJunctionId.get(laneId);
+            junctionId = this.laneIdToOutgoingJunctionId.apply(laneId);
             if (junctionId == null)
                 break;
-            List<LaneId> junctionLanes = this.junctionId2outgoingLaneId.get(junctionId);
+            List<LaneId> junctionLanes = this.junctionIdToOutgoingLaneIdList.apply(junctionId);
             nextLaneId = junctionLanes.get(ThreadLocalRandom.current().nextInt(junctionLanes.size()));
             routeElements.add(new RouteElement(junctionId, nextLaneId));
             laneId = nextLaneId;
@@ -97,6 +86,6 @@ public class ExampleCarProvider {
     }
 
     private LaneId getRandomStartLane() {
-        return this.laneIdList.get(ThreadLocalRandom.current().nextInt(this.laneIdList.size()));
+        return this.localLaneIdList.get(ThreadLocalRandom.current().nextInt(this.localLaneIdList.size()));
     }
 }
